# hpi-modules

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my/: harvester.py
src/my/letterboxd/: __init__.py  all.py  common.py  export.py
src/my/ps_timetracker/: __init__.py  all.py  common.py  export.py
src/my/trakt/: __init__.py  all.py  common.py  export.py
testdata/: trakt-export-sample.json
testdata/letterboxd-export-sample/: diary.csv  profile.csv  ratings.csv  reviews.csv  watched.csv  watchlist.csv
testdata/letterboxd-export-sample/likes/: films.csv
tests/: conftest.py  test_common.py  test_export.py  test_harvester.py  test_ps_timetracker.py  test_trakt.py
